**8.1.0 (unreleased)**


**8.0.0 (2016-01-19)**

* **BACKWARD INCOMPATIBLE** Drop support for Python 3.2.

* **BACKWARD INCOMPATIBLE** Remove the ability to find any files other than the
  ones directly linked from the index or find-links pages.

* **BACKWARD INCOMPATIBLE** Remove the ``--download-cache`` which had been
  deprecated and no-op'd in 6.0.

* **BACKWARD INCOMPATIBLE** Remove the ``--log-explicit-levels`` which had been
  deprecated in 6.0.

* **BACKWARD INCOMPATIBLE** Change pip wheel --wheel-dir default path from
  <cwd>/wheelhouse to <cwd>.

* Deprecate and no-op the ``--allow-external``, ``--allow-all-external``, and
  ``--allow-unverified`` functionality that was added as part of PEP 438. With
  changes made to the repository protocol made in PEP 470, these options are no
  longer functional.

* Allow ``--trusted-host`` within a requirements file. :issue:`2822`.

* Allow ``--process-dependency-links`` within a requirements file. :issue:`1274`.

* Allow ``--pre`` within a requirements file. :issue:`1273`.

* Allow repository URLs with secure transports to count as trusted. (E.g.,
  "git+ssh" is okay.) :issue:`2811`.

* Implement a top-level ``pip download`` command and deprecate
  ``pip install --download``.

* Fixed :issue:`3141`, when uninstalling, look for the case of paths containing
  symlinked directories (:pull:`3154`)

* When installing, if building a wheel fails, clear up the build directory
  before falling back to a source install. :issue:`3047`.

* Fix user directory expansion when ``HOME=/``. Workaround for Python bug
  http://bugs.python.org/issue14768, reported in :issue:`2996`.

* Fixed :issue:`3009`, correct reporting of requirements file line numbers
  (:pull:`3125`)

* Fixed :issue:`1062`, Exception(IOError) for ``pip freeze`` and ``pip list``
  commands with subversion >= 1.7. (:pull:`3346`)

* Provide a spinner showing that progress is happening when installing or